--- a/Electric_billing_system/Electric_billing_system/Admin/Admin Menu.resx
+++ b/Electric_billing_system/Electric_billing_system/Admin/Admin Menu.resx
@@ -19346,7 +19346,7 @@
         AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
 </value>
   </data>
-  <data name="pictureBox2.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="SystemLog_btn.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         R0lGODlhIAMgA/cAAAAAAP7+/v7+/v7+/v7+/v7+/v/+////////////////////////////////////
         ///////////////////////////+///+///+///+//8B//8A//8A//8A//8A//8A//8A//8A//8A//8A
